# dev-labs

./: .gitignore  AGENTS.md  CLAUDE.md
labs/: STATUS.md
labs/0-os/cgroups/: README.md
labs/0-os/memory/: README.md
labs/0-os/namespaces/: README.md
labs/0-os/scheduling/: README.md
labs/1-networking/cni/: README.md
labs/1-networking/dns/: README.md
labs/1-networking/ebpf/: README.md
labs/1-networking/load-balancing/: README.md
labs/1-networking/tcp/: README.md
labs/2-dsa/bloom-hll-cms/: README.md  bloom.go  bloom_test.go  cms.go  cms_test.go  go.mod  hash.go  hll.go  hll_test.go  main.go
labs/2-dsa/bplus-tree/: README.md
labs/2-dsa/consistent-hashing/: README.md  go.mod  ring.go
labs/2-dsa/lsm-tree/: README.md
labs/2-dsa/merkle-crdt/: README.md
labs/2-dsa/timing-wheels/: README.md
labs/3-system-design/analytics/: README.md
labs/3-system-design/coordination/: README.md
labs/3-system-design/oltp/: README.md
labs/3-system-design/serving/: README.md
labs/3-system-design/specialized/: README.md
labs/4-runtime-k8s/k3d-cluster/: README.md
labs/exposure-ledger/: bench.go  demo.go  demo2.go  go.mod  main.go  schema.sql
products/_template/: .env.example  README.md
products/cc-econ/: dashboard.go  go.mod  main.go
products/cc-rag/: .gitignore  README.md  pyproject.toml  queries.yaml
products/cc-rag/cc_rag/: cli.py  embed.py  eval.py  index.py  ingest.py
products/cc-rag/knowledge/: cost-of-llm-agents.md  pattern-calibration.md  rag-design.md  scientific-method-eng.md  subagents-and-context.md
sandbox/infra/: docker-compose.yml
(+10 files in other folders)
